chore: migrate cli

--- a/lerna.json
+++ b/lerna.json
@@ -22,7 +22,7 @@
     }
   },
   "changelog": {
-    "repo": "zcorky/zodash",
+    "repo": "whatwewant/docschina-weekly",
     "labels": {
       "enchancement": ":rocket:(Enhancement)",
       "bug": ":bug:(Bug Fix)",
