--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.2.0",
     "jest": "^27.2.1",
-    "lerna": "^3.15.0",
+    "lerna": "^4.0.0",
     "lerna-changelog": "^0.8.2",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.11",
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.2.3"
+    "tsc-watch": "^4.5.0",
+    "typescript": "^4.4.3"
   },
   "lint-staged": {
     "**/*.ts": [
