--- a/packages/cli/tsconfig.build.json
+++ b/packages/cli/tsconfig.build.json
@@ -1,7 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "module": "commonjs",
+    "outDir": "./lib",
+    "declaration": false,
+    "sourceMap": false
   },
   "include": [
     "./src"
